--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,10 @@ dmypy.json
 .pyre/
 
 frontend/node_modules
+
+POSTGRES_USER=django_user
+POSTGRES_PASSWORD=mysecretpassword
+POSTGRES_DB=django
+# Добавляем переменные для Django-проекта:
+DB_HOST=db
+DB_PORT=5432
