--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -4,6 +4,4 @@ venv
 db.sqlite3 
 .idea 
 .vscode
-
-# Кроме того, стоит добавить в .dockerignore файл локальной базы данных — db.sqlite3. 
-# Так в образ для продакшена не попадут данные, добавленные в базу для тестирования.
+.env
