build_and_push_to_docker_hub 5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,5 +77,5 @@ jobs:
           context: ./backend/
           push: true
  
-          tags: DPavlen/taski_backend:latest
+          tags: dpavlen/taski_backend:latest
 
