--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: dpavlen/taski_gateway  # Качаем с Docker Hub
+    image: dpavlen/taski_gateway 
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
